Revert "Make Mutex.lock return null for timed out"
This reverts commit 4aae685630252eadf6ae5f447898cf8644a219ea.

--- a/spec/index.html
+++ b/spec/index.html
@@ -2723,7 +2723,7 @@ markEffects: true
           1. Return UnlockTokenCreateIfNeeded(_unlockToken_, _mutex_).
         1. Else,
           1. Assert: _result_ is ~timed-out~.
-          1. Return *null*.
+          1. Return *"timed-out"*.
       </emu-alg>
     </emu-clause>
 
