--- a/spec/index.html
+++ b/spec/index.html
@@ -2910,6 +2910,10 @@ markEffects: true
         1. If _timeout_ is either *NaN* or *+∞*<sub>𝔽</sub>, let _tMillis_ be +∞; else if _timeout_ is *-∞*<sub>𝔽</sub>, let _tMillis_ be 0; else let _tMillis_ be max(ℝ(_timeout_), 0).
         1. If _predicate_ is not *undefined* and IsCallable(_predicate_) is *false*, throw a *TypeError* exception.
         1. If AgentCanSuspend() is *false*, throw a *TypeError* exception.
+        1. Let _timeBeforeWaitLoop_ be the time value (UTC) identifying the current time.
+        1. Let _additionalTimeout_ be an implementation-defined non-negative mathematical value.
+        1. Let _timeoutTime_ be ℝ(_timeBeforeWaitLoop_) + _tMillis_ + _additionalTimeout_.
+        1. NOTE: When _tMillis_ is +∞, _timeoutTime_ is also +∞.
         1. Let _thisAgent_ be AgentSignifier().
         1. Let _WL_ be _cv_.[[ConditionWaiterList]].
         1. Let _satisfied_ be *false*.
@@ -2917,11 +2921,8 @@ markEffects: true
           1. If _predicate_ is not *undefined*, then
             1. Set _satisfied_ to ToBoolean(? Call(_predicate_, *undefined*)).
           1. If _satisfied_ is *true*, return *true*.
-          1. If _tMillis_ &le; 0, return _satisfied_.
-          1. Let _timeBeforeWait_ be the time value (UTC) identifying the current time.
-          1. Let _additionalTimeout_ be an implementation-defined non-negative mathematical value.
-          1. Let _timeoutTime_ be ℝ(_timeBeforeWait_) + _tMillis_ + _additionalTimeout_.
-          1. NOTE: When _tMillis_ is +∞, _timeoutTime_ is also +∞.
+          1. Let _now_ be the time value (UTC) identifying the current time.
+          1. If _now_ &ge; _timeoutTime_, return *false*.
           1. Perform EnterCriticalSection(_WL_).
           1. Let _waiterRecord_ be a new Waiter Record { [[AgentSignifier]]: _thisAgent_, [[PromiseCapability]]: ~blocking~, [[TimeoutTime]]: _timeoutTime_, [[Result]]: *"ok"* }.
           1. Perform AddWaiter(_WL_, _waiterRecord_).
@@ -2929,9 +2930,6 @@ markEffects: true
           1. Perform SuspendThisAgent(_WL_, _waiterRecord_).
           1. Perform LeaveCriticalSection(_WL_).
           1. Perform LockMutex(_mutex_, +∞).
-          1. Let _timeAfterWait_ be the time value (UTC) identifying the current time.
-          1. Let _timeElapsed_ be _timeAfterWait_ - _timeBeforeWait_.
-          1. Set _tMillis_ to _tMillis_ - _timeElapsed_.
           1. If _waiterRecord_.[[Result]] is *"ok"*, then
             1. Set _satisfied_ to *true*.
           1. Else,
