--- a/spec/index.html
+++ b/spec/index.html
@@ -2604,21 +2604,23 @@ markEffects: true
         LockMutex (
           _mutex_: an Object,
           _tMillis_: a mathematical value,
-        ) : ~acquired~ or ~timed-out~
+        ) : ~acquired~, ~deadlock~, or ~timed-out~
       </h1>
       <dl class="header">
       </dl>
       <emu-alg>
         1. Assert: _mutex_ has a [[MutexWaiterList]] internal slot.
         1. Assert: If _tMillis_ is not 0, AgentCanSuspend() is *true*.
+        1. Let _thisAgent_ be AgentSignifier().
         1. Let _WL_ be _mutex_.[[MutexWaiterList]].
         1. Perform EnterCriticalSection(_WL_).
-        1. If _mutex_.[[IsLocked]] is *false*, then
-          1. Set _mutex_.[[IsLocked]] to *true*.
+        1. If _mutex_.[[IsLockedBy]] is ~empty~, then
+          1. Set _mutex_.[[IsLockedBy]] to _thisAgent_.
           1. Perform LeaveCriticalSection(_WL_).
           1. Return ~acquired~.
+        1. If _mutex_.[[IsLockedBy]] is _thisAgent_, then
+          1. Return ~deadlock~.
         1. If _tMillis_ is 0, return ~timed-out~.
-        1. Let _thisAgent_ be AgentSignifier().
         1. Let _now_ be the time value (UTC) identifying the current time.
         1. Let _additionalTimeout_ be an implementation-defined non-negative mathematical value.
         1. Let _timeoutTime_ be ℝ(_now_) + _tMillis_ + _additionalTimeout_.
@@ -2628,8 +2630,8 @@ markEffects: true
           1. Let _waiterRecord_ be a new Waiter Record { [[AgentSignifier]]: _thisAgent_, [[PromiseCapability]]: ~blocking~, [[TimeoutTime]]: _timeoutTime_, [[Result]]: *"ok"* }.
           1. Perform AddWaiter(_WL_, _waiterRecord_).
           1. Perform SuspendThisAgent(_WL_, _waiterRecord_).
-          1. If _mutex_.[[IsLocked]] is *false*, then
-            1. Set _mutex_.[[IsLocked]] to *true*.
+          1. If _mutex_.[[IsLockedBy]] is ~empty~, then
+            1. Set _mutex_.[[IsLockedBy]] to _thisAgent_.
             1. Set _waiterRecord_.[[Result]] to *"ok"*.
             1. Set _done_ to *true*.
           1. Else if _waiterRecord_.[[Result]] is *"timed-out"*, then
@@ -2654,8 +2656,8 @@ markEffects: true
         1. Assert: _mutex_ has a [[MutexWaiterList]] internal slot.
         1. Let _WL_ be _mutex_.[[MutexWaiterList]].
         1. Perform EnterCriticalSection(_WL_).
-        1. Assert: _mutex_.[[IsLocked]] is *true*.
-        1. Set _mutex_.[[IsLocked]] to *false*.
+        1. Assert: _mutex_.[[IsLockedBy]] is AgentSignifier().
+        1. Set _mutex_.[[IsLockedBy]] to ~empty~.
         1. Let _S_ be RemoveWaiters(_WL_, 1).
         1. For each element _W_ of _S_, do
           1. Perform NotifyWaiter(_WL_, _W_).
@@ -2682,9 +2684,9 @@ markEffects: true
         1. If NewTarget is *undefined*, throw a *TypeError* exception.
         1. Let _createInitializer_ be a new Abstract Closure with parameters (_newMutex_) that captures nothing and performs the following steps when called:
           1. Set _newMutex_.[[MutexWaiterList]] to a new WaiterList Record.
-          1. Set _newMutex_.[[IsLocked]] to *false*.
+          1. Set _newMutex_.[[IsLockedBy]] to ~empty~.
           1. Return ~unused~.
-        1. Return SharedStructCreate(_createInitializer_, « [[MutexWaiterList]], [[IsLocked]] »).
+        1. Return SharedStructCreate(_createInitializer_, « [[MutexWaiterList]], [[IsLockedBy]] »).
       </emu-alg>
     </emu-clause>
   </emu-clause>
@@ -2717,6 +2719,7 @@ markEffects: true
           1. If _unlockToken_.[[LockedMutex]] is not ~empty~, throw a *TypeError* exception.
         1. If AgentCanSuspend() is *false*, throw a *TypeError* exception.
         1. Let _result_ be LockMutex(_mutex_, +∞).
+        1. If _result_ is ~deadlock~, throw a *TypeError* exception.
         1. Assert: _result_ is ~acquired~.
         1. Return UnlockTokenCreateIfNeeded(_unlockToken_, _mutex_).
       </emu-alg>
@@ -2735,7 +2738,9 @@ markEffects: true
         1. If _timeout_ is either *NaN* or *+∞*<sub>𝔽</sub>, let _tMillis_ be +∞; else if _timeout_ is *-∞*<sub>𝔽</sub>, let _tMillis_ be 0; else let _tMillis_ be max(ℝ(_timeout_), 0).
         1. If _tMillis_ is not 0 and AgentCanSuspend() is *false*, throw a *TypeError* exception.
         1. Let _result_ be LockMutex(_mutex_, _tMillis_).
-        1. If _result_ is ~acquired~, then
+        1. If _result_ is ~deadlock~, then
+          1. Throw *TypeError* exception.
+        1. Else if _result_ is ~acquired~, then
           1. Return UnlockTokenCreateIfNeeded(_unlockToken_, _mutex_).
         1. Else,
           1. Assert: _result_ is ~timed-out~.
@@ -2890,7 +2895,8 @@ markEffects: true
         1. Perform UnlockMutex(_mutex_).
         1. Perform SuspendThisAgent(_WL_, _waiterRecord_).
         1. Perform LeaveCriticalSection(_WL_).
-        1. Perform LockMutex(_mutex_, +∞).
+        1. Let _lockResult_ be LockMutex(_mutex_, +∞).
+        1. Assert: _lockResult_ is ~acquired~.
         1. Assert: _waiterRecord_.[[Result]] is *"ok"*.
         1. Return *undefined*.
       </emu-alg>
@@ -2929,7 +2935,8 @@ markEffects: true
           1. Perform UnlockMutex(_mutex_).
           1. Perform SuspendThisAgent(_WL_, _waiterRecord_).
           1. Perform LeaveCriticalSection(_WL_).
-          1. Perform LockMutex(_mutex_, +∞).
+          1. Let _lockResult_ be LockMutex(_mutex_, +∞).
+          1. Assert: _lockResult_ is ~acquired~.
           1. If _waiterRecord_.[[Result]] is *"ok"*, then
             1. Set _satisfied_ to *true*.
           1. Else,
