--- a/spec/index.html
+++ b/spec/index.html
@@ -375,7 +375,7 @@ markEffects: true
         1. If _thisArgument_ is not an Object, throw a *TypeError* exception.
         1. If _thisArgument_ does not have a [[StructBrands]] internal slot, throw a *TypeError* exception.
         1. If _thisArgument_.[[StructBrands]] does not contain _homeObject_.[[StructBrand]], throw a *TypeError* exception.
-        1. Return ? Call(_target_, _thisArgument_, argumentsList_).
+        1. Return ? Call(_target_, _thisArgument_, _argumentsList_).
       </emu-alg>
     </emu-clause>
 
