--- a/spec/index.html
+++ b/spec/index.html
@@ -1221,6 +1221,19 @@ markEffects: true
     </emu-clause>
   </emu-clause>
 
+  <emu-clause id="sec-changes-to-the-reflect-object-shared-structs">
+    <h1>Changes to the Reflect Object</h1>
+    <ins class="block">
+    <emu-clause id="sec-reflect.canBeShared">
+      <h1>Reflect.canBeShared ( _val_ )</h1>
+      <p></p>
+      <emu-alg>
+        1. Return CanBeSharedAcrossAgents(_val_).
+      </emu-alg>
+    </emu-clause>
+    </ins>
+  </emu-clause>
+
   <emu-clause id="sec-changes-to-memory-model">
     <h1>Changes to the Memory Model</h1>
     <emu-clause id="sec-memory-model-fundamentals">
